packages/ui_tests/tests/ui/infinity_pool/erase_requires_send.stderr
error[E0277]: `Rc<i32>` cannot be sent between threads safely
 --> tests/ui/infinity_pool/erase_requires_send.rs:8:45
  |
8 |     let pool = OpaquePool::with_layout_of::<Rc<i32>>();
  |                                             ^^^^^^^ `Rc<i32>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `Rc<i32>`
note: required by a bound in `OpaquePool::with_layout_of`
 --> $WORKSPACE/packages/infinity_pool/src/opaque/pool_managed.rs
  |
  |     pub fn with_layout_of<T: Sized + Send>() -> Self {
  |                                      ^^^^ required by this bound in `OpaquePool::with_layout_of`

error[E0277]: `Rc<i32>` cannot be sent between threads safely
 --> tests/ui/infinity_pool/erase_requires_send.rs:9:50
  |
9 |     let handle: PooledMut<Rc<i32>> = pool.insert(Rc::new(42));
  |                                           ------ ^^^^^^^^^^^ `Rc<i32>` cannot be sent between threads safely
  |                                           |
  |                                           required by a bound introduced by this call
  |
  = help: the trait `Send` is not implemented for `Rc<i32>`
note: required by a bound in `OpaquePool::insert`
 --> $WORKSPACE/packages/infinity_pool/src/opaque/pool_managed.rs
  |
  |     pub fn insert<T: Send + 'static>(&self, value: T) -> PooledMut<T> {
  |                      ^^^^ required by this bound in `OpaquePool::insert`
help: consider dereferencing here
  |
9 |     let handle: PooledMut<Rc<i32>> = pool.insert(*Rc::new(42));
  |                                                  +

error[E0277]: `Rc<i32>` cannot be sent between threads safely
  --> tests/ui/infinity_pool/erase_requires_send.rs:13:26
   |
13 |     let _erased = handle.erase();
   |                          ^^^^^ `Rc<i32>` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Rc<i32>`
note: required by a bound in `PooledMut::<T>::erase`
  --> $WORKSPACE/packages/infinity_pool/src/handles/managed_mut.rs
   |
   |     pub fn erase(self) -> PooledMut<()>
   |            ----- required by a bound in this associated function
   |     where
   |         T: Send + Sync,
   |            ^^^^ required by this bound in `PooledMut::<T>::erase`

error[E0277]: `Rc<i32>` cannot be shared between threads safely
  --> tests/ui/infinity_pool/erase_requires_send.rs:13:26
   |
13 |     let _erased = handle.erase();
   |                          ^^^^^ `Rc<i32>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `Rc<i32>`
note: required by a bound in `PooledMut::<T>::erase`
  --> $WORKSPACE/packages/infinity_pool/src/handles/managed_mut.rs
   |
   |     pub fn erase(self) -> PooledMut<()>
   |            ----- required by a bound in this associated function
   |     where
   |         T: Send + Sync,
   |                   ^^^^ required by this bound in `PooledMut::<T>::erase`
